# pico-project-bootstrap

./: .gitignore  CMakeLists.txt  LICENSE  README.md  platformio.ini
src/: CMakeLists.txt  main.c
